deprecated jee dependencies basic demo